kube/service-stravacomp.yaml
apiVersion: v1
kind: Service
metadata:
  name: stravacomp-service
spec:
  ports:
  - protocol: TCP
    targetPort: 3000
    port: 80 # the port that this service should serve on
    # the container on each pod to connect to, can be a name
    # (e.g. 'www') or a number (e.g. 80)
  # just like the selector in the deployment,
  # but this time it identifies the set of pods to load balance
  # traffic to.
  selector:
    app: stravacomp
